--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 [tox]
-envlist = py25,py26,py27,py32
+envlist = py25, py26, py27, py32
 
 [testenv]
-deps= nose
-      coverage
-commands = nosetests --with-coverage --cover-erase --cover-inclusive --cover-html --cover-package=dexml
-
-[testenv:py32]
-deps= 
-commands = python setup.py test
+deps= coverage
+commands = coverage erase
+           coverage run setup.py test
+           coverage report --include=*dexml* --omit=*test*
 
