add pypy to tox testing config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py25, py26, py27, py32
+envlist = py25, py26, py27, py32, pypy
 
 [testenv]
 deps= coverage
@@ -7,3 +7,6 @@ commands = coverage erase
            coverage run setup.py test
            coverage report --include=*dexml* --omit=*test*
 
+[testenv:pypy]
+deps= 
+commands = pypy setup.py test
